// Copyright 2018 Jorge J. Gomez-Sanz
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "iotucm.coffeeservice";
option java_outer_classname = "CoffeeServerProto";
option objc_class_prefix = "HLW";

package coffeeserver;

// The cofee machine service definition
service CoffeeServer {
    // Informs  a capsule was consumed
    rpc consumedCapsule(CapsuleConsumedRequest) returns (CapsuleConsumedReply) {}
    rpc checkMachineStatus(MachineStatusRequest) returns (MachineStatusReply) {}
    rpc getPrice(MachinePricesRequest) returns (MachinePricesReply) {}
    rpc buyProduct(MachineBuyProductRequest) returns (MachineBuyProductReply) {}    
}

// The capsule consumption signal
message CapsuleConsumedRequest {
    string clientid = 1;
    string type = 2;
}

// The answer from the server
message CapsuleConsumedReply {
    int32 expectedRemaining = 3;
    int32 supplyProvisioned = 4;
    string expectedProvisionDate = 5;
}

message MachineStatusRequest {
    float waterTemp = 6;
    int64 date = 7;
    float pressure = 8;
}

message MachineStatusReply {
    bool works = 9;
    string description = 10;
    string date = 11;
}

message MachinePricesRequest {
    string currency = 12;
}

message MachinePricesReply {
    string listPrices = 13;
}

message MachineBuyProductRequest {
    string currency = 14;
    string productName = 15;
    float quantity = 16;
    string giftcard = 17;
}

message MachineBuyProductReply {
    string change = 18;
}
